<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WIB</string>
    <string name="action_settings">Settings</string>
    <string name="imgButtonOneLabel">About</string>
    <string name="imgButtonTwoLabel">Members</string>
    <string name="imgButtonThreeLabel">Calendar</string>
    <string name="imgButtonFourLabel">Twitter</string>
    <string name="imgButtonFiveLabel">Facebook</string>
    <string name="imgButtonSixLabel">Past Events</string>
    <string name="imgButtonSevenLabel">Button 7</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_facebook_view">FacebookViewActivity</string>
    <string name="title_activity_about_view">AboutView</string>
    <string name="title_activity_wib_app">WIB App</string>
    <string name="title_activity_members_view">MembersViewActivity</string>
    <string name="title_activity_calendar_view">CalendarViewActivity</string>
    <string name="title_activity_past_events_view">Past Events</string>
    <string name="title_activity_twitter_view">TwitterViewActivity</string>

</resources>